--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>CASA-GPCS</title>
+    <style>
+      body{
+        font-family: Arial, sans-serif;
+        display: grid;
+        place-items: center;
+        height: 100vh;
+        background: #f4f4f4
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Casa Proto1</h1>
+    <p>First static site</p>
+  </body>
+</html>
