--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <nav class="sidebar">
     <h2>CASA</h2>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/upcoming-events/">Upcoming Events</a></li>
-      <li><a href="/notes/">Notes</a></li>
-      <li><a href="/archives/">Archives</a></li>
+      <li><a href="./">Home</a></li>
+      <li><a href="../upcoming-events/">Upcoming Events</a></li>
+      <li><a href="../notes/">Notes</a></li>
+      <li><a href="../archives/">Archives</a></li>
     </ul>
   </nav>
 
