--- a/index.html
+++ b/index.html
@@ -7,52 +7,37 @@
 </head>
 <body>
 
-<div class="layout">
+<nav class="nav">
+  <div class="nav-title">CASA</div>
+  <a href="./">Home</a>
+  <a href="upcoming-events/">Upcoming Events</a>
+  <a href="notes/">Notes</a>
+  <a href="archives/">Archives</a>
+</nav>
 
-  <!-- Sidebar Navigation -->
-  <nav class="sidebar">
-    <h2>CASA</h2>
-    <ul>
-      <li><a href="./">Home</a></li>
-      <li><a href="upcoming-events/">Upcoming Events</a></li>
-      <li><a href="notes/">Notes</a></li>
-      <li><a href="archives/">Archives</a></li>
-    </ul>
-  </nav>
+<main class="content">
+  <h1>CO & AN Students Association (CASA)</h1>
+  <p class="tagline">
+    A student-driven academic committee fostering collaboration,
+    leadership, and technical excellence.
+  </p>
 
-  <!-- Main Content -->
-  <main class="content">
+  <div class="card">
+    <h2>About CASA</h2>
+    <p>
+      CO & AN Students Association (CASA) represents the academic and
+      professional interests of students from the CO & AN departments.
+      The committee works towards building a strong student community
+      through academic events, workshops, and peer-learning initiatives.
+    </p>
+    <p>
+      CASA aims to support holistic development beyond the classroom and
+      prepare students for future academic and professional challenges.
+    </p>
+    <p><i>(This content can be updated with the official description.)</i></p>
+  </div>
+</main>
 
-    <!-- Landing Page Content ONLY -->
-    <section class="section">
-      <h1>CO & AN Students Association (CASA)</h1>
-      <p class="tagline">
-        A student-driven academic committee fostering collaboration, leadership,
-        and technical excellence.
-      </p>
-
-      <div class="about-box">
-        <h2>About CASA</h2>
-        <p>
-          CO & AN Students Association (CASA) represents the collective academic
-          and professional interests of students from the CO & AN departments.
-          The committee aims to create a strong learning environment by encouraging
-          peer interaction, innovation, and leadership.
-        </p>
-        <p>
-          CASA organizes academic events, workshops, seminars, peer-learning
-          sessions, and student development initiatives to support holistic growth
-          beyond the classroom.
-        </p>
-        <p>
-          <i>This section can be replaced with the official committee description.</i>
-        </p>
-      </div>
-
-    </section>
-
-  </main>
-</div>
-
+<script src="script.js"></script>
 </body>
 </html>
