--- a/upcoming-events/index.html
+++ b/upcoming-events/index.html
@@ -7,39 +7,27 @@
 </head>
 <body>
 
-<div class="layout">
+<nav class="nav">
+  <div class="nav-title">CASA</div>
+  <a href="../">Home</a>
+  <a href="../upcoming-events/">Upcoming Events</a>
+  <a href="../notes/">Notes</a>
+  <a href="../archives/">Archives</a>
+</nav>
 
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <h2>CASA</h2>
-    <ul>
-      <li><a href="../">Home</a></li>
-      <li><a href="../upcoming-events/">Upcoming Events</a></li>
-      <li><a href="../notes/">Notes</a></li>
-      <li><a href="../archives/">Archives</a></li>
-    </ul>
-  </nav>
+<main class="content">
+  <h1>Upcoming Events</h1>
+  <p class="tagline">What’s coming next at CASA</p>
 
-  <!-- Main Content -->
-  <main class="content">
-    <section class="section">
-      <h1>Upcoming Events</h1>
-      <p class="tagline">We’re working on this section</p>
-
-      <div class="about-box">
-        <p>
-          The Upcoming Events section will soon feature information about
-          seminars, workshops, academic activities, and student-led initiatives
-          organized by CASA.
-        </p>
-        <p>
-          <strong>Coming Soon.</strong> Stay tuned!
-        </p>
-      </div>
-    </section>
-  </main>
-
-</div>
+  <div class="card">
+    <p>
+      This section will display details about upcoming seminars,
+      workshops, technical events, and student-led initiatives
+      organized by CASA.
+    </p>
+    <p><strong>Coming Soon.</strong></p>
+  </div>
+</main>
 
 <script src="../script.js"></script>
 </body>
