--- a/notes/index.html
+++ b/notes/index.html
@@ -7,59 +7,29 @@
 </head>
 <body>
 
-<div class="layout">
+<nav class="nav">
+  <div class="nav-title">CASA</div>
+  <a href="../">Home</a>
+  <a href="../upcoming-events/">Upcoming Events</a>
+  <a href="../notes/">Notes</a>
+  <a href="../archives/">Archives</a>
+</nav>
 
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <h2>CASA</h2>
-    <ul>
-      <li><a href="../">Home</a></li>
-      <li><a href="../upcoming-events/">Upcoming Events</a></li>
-      <li><a href="../notes/">Notes</a></li>
-      <li><a href="../archives/">Archives</a></li>
-    </ul>
-  </nav>
+<main class="content">
+  <h1>Notes</h1>
+  <p class="tagline">Centralized academic resources</p>
 
-  <!-- Main Content -->
-  <main class="content">
-    <section class="section">
-      <h1>Notes</h1>
-      <p class="tagline">Centralized academic resources for CO & AN students</p>
-
-      <!-- Semester-wise -->
-      <div class="about-box" style="margin-bottom: 25px;">
-        <h2>📘 Semester-wise Notes</h2>
-        <p>
-          This section will contain notes organized semester-wise to help students
-          easily access study material relevant to their current curriculum.
-        </p>
-        <p><strong>Status:</strong> Coming Soon</p>
-      </div>
-
-      <!-- Subject-wise -->
-      <div class="about-box" style="margin-bottom: 25px;">
-        <h2>📗 Subject-wise Notes</h2>
-        <p>
-          Notes will be grouped subject-wise for quick reference and revision,
-          curated by faculty and CASA members.
-        </p>
-        <p><strong>Status:</strong> Coming Soon</p>
-      </div>
-
-      <!-- General Resources -->
-      <div class="about-box">
-        <h2>📙 General Resources</h2>
-        <p>
-          This section will include additional learning resources such as reference
-          materials, guides, and important academic documents.
-        </p>
-        <p><strong>Status:</strong> Coming Soon</p>
-      </div>
-
-    </section>
-  </main>
-
-</div>
+  <div class="card">
+    <p>
+      This section will contain semester-wise and subject-wise
+      study materials for CO & AN students.
+    </p>
+    <p>
+      Notes will be uploaded in a structured manner for easy access.
+    </p>
+    <p><strong>Coming Soon.</strong></p>
+  </div>
+</main>
 
 <script src="../script.js"></script>
 </body>
