--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- ✅ THIS IS THE FIX -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>CASA – CO & AN Students Association</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
 
@@ -27,17 +31,16 @@
     <p>
       CO & AN Students Association (CASA) represents the academic and
       professional interests of students from the CO & AN departments.
-      The committee works towards building a strong student community
-      through academic events, workshops, and peer-learning initiatives.
     </p>
     <p>
-      CASA aims to support holistic development beyond the classroom and
-      prepare students for future academic and professional challenges.
+      The committee works towards academic growth through events,
+      workshops, and peer-learning initiatives.
     </p>
-    <p><i>(This content can be updated with the official description.)</i></p>
+    <p><i>(You can update this content later.)</i></p>
   </div>
 </main>
 
 <script src="script.js"></script>
 </body>
 </html>
+  
