--- a/upcoming-events/index.html
+++ b/upcoming-events/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- ✅ REQUIRED -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Upcoming Events – CASA</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css?v=2">
 </head>
 <body>
 
@@ -21,9 +25,8 @@
 
   <div class="card">
     <p>
-      This section will display details about upcoming seminars,
-      workshops, technical events, and student-led initiatives
-      organized by CASA.
+      Details of upcoming seminars, workshops, and technical events
+      organized by CASA will appear here.
     </p>
     <p><strong>Coming Soon.</strong></p>
   </div>
