--- a/notes/index.html
+++ b/notes/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- ✅ REQUIRED -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Notes – CASA</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css?v=2">
 </head>
 <body>
 
@@ -21,11 +25,8 @@
 
   <div class="card">
     <p>
-      This section will contain semester-wise and subject-wise
-      study materials for CO & AN students.
-    </p>
-    <p>
-      Notes will be uploaded in a structured manner for easy access.
+      Subject-wise and semester-wise notes will be uploaded here
+      for easy student access.
     </p>
     <p><strong>Coming Soon.</strong></p>
   </div>
