--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <!-- ✅ THIS IS THE FIX -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>CASA – CO & AN Students Association</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
 
+<header class="header">
+  <img src="assets/images/casa-logo.png" alt="CASA Logo">
+  <h1>CASA – CO & AN Students Association</h1>
+  <img src="assets/images/college-logo.png" alt="College Logo">
+</header>
+
 <nav class="nav">
-  <div class="nav-title">CASA</div>
   <a href="./">Home</a>
   <a href="upcoming-events/">Upcoming Events</a>
   <a href="notes/">Notes</a>
@@ -20,27 +22,26 @@
 </nav>
 
 <main class="content">
-  <h1>CO & AN Students Association (CASA)</h1>
+  <h2>Welcome to CASA</h2>
   <p class="tagline">
-    A student-driven academic committee fostering collaboration,
-    leadership, and technical excellence.
+    CO & AN Students Association is a student-driven academic committee
+    fostering collaboration, leadership, and technical excellence.
   </p>
 
   <div class="card">
-    <h2>About CASA</h2>
+    <h3>About CASA</h3>
     <p>
-      CO & AN Students Association (CASA) represents the academic and
-      professional interests of students from the CO & AN departments.
+      CASA represents the academic and professional interests of students
+      from the CO & AN departments. The committee organizes workshops,
+      technical events, peer-learning sessions, and academic initiatives
+      for holistic student development.
     </p>
     <p>
-      The committee works towards academic growth through events,
-      workshops, and peer-learning initiatives.
+      This content can be updated with the official committee description.
     </p>
-    <p><i>(You can update this content later.)</i></p>
   </div>
 </main>
 
 <script src="script.js"></script>
 </body>
 </html>
-  
