--- a/upcoming-events/index.html
+++ b/upcoming-events/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <!-- ✅ REQUIRED -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Upcoming Events – CASA</title>
-  <link rel="stylesheet" href="../style.css?v=2">
+  <link rel="stylesheet" href="../style.css?v=3">
 </head>
 <body>
 
+<header class="header">
+  <img src="../assets/images/casa-logo.png">
+  <h1>CASA – CO & AN Students Association</h1>
+  <img src="../assets/images/college-logo.png">
+</header>
+
 <nav class="nav">
-  <div class="nav-title">CASA</div>
   <a href="../">Home</a>
   <a href="../upcoming-events/">Upcoming Events</a>
   <a href="../notes/">Notes</a>
@@ -20,15 +22,12 @@
 </nav>
 
 <main class="content">
-  <h1>Upcoming Events</h1>
+  <h2>Upcoming Events</h2>
   <p class="tagline">What’s coming next at CASA</p>
 
   <div class="card">
-    <p>
-      Details of upcoming seminars, workshops, and technical events
-      organized by CASA will appear here.
-    </p>
-    <p><strong>Coming Soon.</strong></p>
+    <p>Details of upcoming workshops, seminars, and events will appear here.</p>
+    <strong>Coming Soon.</strong>
   </div>
 </main>
 
