--- a/notes/index.html
+++ b/notes/index.html
@@ -2,61 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <!-- REQUIRED FOR MOBILE -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Notes – CASA</title>
-  <link rel="stylesheet" href="../style.css?v=4">
+  <link rel="stylesheet" href="../style.css?v=3">
 </head>
 <body>
 
-<!-- ✅ NAVIGATION — SAME AS LATEST VERSION -->
+<header class="header">
+  <img src="../assets/images/casa-logo.png">
+  <h1>CASA – CO & AN Students Association</h1>
+  <img src="../assets/images/college-logo.png">
+</header>
+
 <nav class="nav">
-  <div class="nav-title">CASA</div>
   <a href="../">Home</a>
   <a href="../upcoming-events/">Upcoming Events</a>
-  <a href="../notes/" class="active">Notes</a>
+  <a href="../notes/">Notes</a>
   <a href="../archives/">Archives</a>
 </nav>
 
-<!-- ✅ MAIN CONTENT -->
 <main class="content">
-  <h1>Notes</h1>
-  <p class="tagline">
-    Centralized academic resources for CO & AN students
-  </p>
+  <h2>Notes</h2>
+  <p class="tagline">Centralized academic resources</p>
 
-  <!-- Semester-wise -->
-  <div class="card" style="margin-bottom: 25px;">
-    <h2>📘 Semester-wise Notes</h2>
-    <p>
-      Notes organized semester-wise to help students quickly access
-      material relevant to their current curriculum.
-    </p>
-    <p><strong>Status:</strong> Coming Soon</p>
-  </div>
-
-  <!-- Subject-wise -->
-  <div class="card" style="margin-bottom: 25px;">
-    <h2>📗 Subject-wise Notes</h2>
-    <p>
-      Subject-wise notes for focused revision, curated by faculty
-      and CASA members.
-    </p>
-    <p><strong>Status:</strong> Coming Soon</p>
-  </div>
-
-  <!-- General Resources -->
   <div class="card">
-    <h2>📙 General Resources</h2>
-    <p>
-      Reference materials, guides, and important academic documents
-      useful across semesters.
-    </p>
-    <p><strong>Status:</strong> Coming Soon</p>
+    <p>Semester-wise and subject-wise notes will be uploaded here.</p>
+    <strong>Coming Soon.</strong>
   </div>
-
 </main>
 
 <script src="../script.js"></script>
