--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
 <header class="header">
-  <img src="assets/images/casa-logo.png" alt="CASA Logo">
+  <img src="assets/images/college-logo.png" alt="CASA Logo">
   <h1>CASA – CO & AN Students Association</h1>
-  <img src="assets/images/college-logo.png" alt="College Logo">
+  <img src="assets/images/casa-logo.png" alt="College Logo">
 </header>
 
 <nav class="nav">
