--- a/notes/index.html
+++ b/notes/index.html
@@ -17,10 +17,14 @@
 
 <div class="layout">
   <aside class="sidebar">
-    <a href="/home/" data-page="home">Home</a>
-    <a href="/home/events/" data-page="events">Upcoming Events</a>
-    <a href="/home/notes/" data-page="notes">Notes</a>
-    <a href="/home/archives/" data-page="archives">Archives</a>
+    <div class="sidebar-inner>
+      <nav>
+        <a href="/home/" data-page="home">Home</a>
+        <a href="/home/events/" data-page="events">Upcoming Events</a>
+        <a href="/home/notes/" data-page="notes">Notes</a>
+        <a href="/home/archives/" data-page="archives">Archives</a>
+      </nav>
+    </div>
   </aside>
 
   <main class="content">
