--- a/events/index.html
+++ b/events/index.html
@@ -4,33 +4,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Upcoming Events | CASA</title>
+
+  <!-- Global CSS -->
   <link rel="stylesheet" href="/home/assets/css/style.css" />
 </head>
 
 <body data-current="events">
 
-<header class="top-header">
-  <img src="/home/assets/images/casa-logo.png" class="logo left">
-  <h1 class="site-title">CASA</h1>
-  <img src="/home/assets/images/college-logo.png" class="logo right">
-</header>
+  <!-- =====================
+       HEADER
+  ====================== -->
+  <header class="top-header">
+    <img src="/home/assets/images/casa-logo.png" class="logo left" alt="CASA Logo">
+    <h1 class="site-title">CASA</h1>
+    <img src="/home/assets/images/college-logo.png" class="logo right" alt="College Logo">
+  </header>
 
-<div class="layout">
-  <aside class="sidebar">
-        <a href="/home/" data-page="home">Home</a>
-        <a href="/home/events/" data-page="events">Upcoming Events</a>
-        <a href="/home/notes/" data-page="notes">Notes</a>
-        <a href="/home/archives/" data-page="archives">Archives</a>
-  </aside>
+  <!-- =====================
+       LAYOUT
+  ====================== -->
+  <div class="layout">
 
-  <main class="content">
-    <section class="card coming-soon">
-      <h2>Upcoming Events</h2>
-      <p>🚧 Content coming soon. Stay tuned!</p>
-    </section>
-  </main>
-</div>
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
+      <a href="/home/" data-page="home">Home</a>
+      <a href="/home/events/" data-page="events">Upcoming Events</a>
+      <a href="/home/notes/" data-page="notes">Notes</a>
+      <a href="/home/archives/" data-page="archives">Archives</a>
+    </aside>
 
-<script src="/home/assets/js/script.js"></script>
+    <!-- CONTENT -->
+    <main class="content">
+
+      <!-- PAGE TITLE CARD -->
+      <section class="card">
+        <h2>Upcoming Events</h2>
+        <p>Click on an event to visit its official website.</p>
+      </section>
+
+      <br>
+
+      <!-- EVENT CARD 1 -->
+      <a href="https://gpcs-event.netlify.app/" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+        <section class="card">
+          <h2>Technical Event 2026</h2>
+          <p>
+            📅 Date: TBD<br>
+            A state-level technical event organized by CASA.<br>
+            Click to Register Now!!
+          </p>
+        </section>
+      </a>
+
+      <br>
+      
+      <!--
+      <a href="https://example-event-2.com" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+        <section class="card">
+          <h2>Workshop on AI & Data Science</h2>
+          <p>
+            📅 April 2025<br>
+            Hands-on workshop covering AI fundamentals and real-world use cases.
+          </p>
+        </section>
+      </a>
+
+      <br>
+
+      <a href="https://example-event-3.com" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+        <section class="card">
+          <h2>CASA Orientation Program</h2>
+          <p>
+            📅 July 2025<br>
+            Introduction to CASA for first-year CO & AN students.
+          </p>
+        </section>
+      </a>
+      -->
+      
+    </main>
+  </div>
+
+  <!-- Global JS -->
+  <script src="/home/assets/js/script.js"></script>
 </body>
 </html>
