--- a/notes/index.html
+++ b/notes/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notes | CASA</title>
 
-  <!-- GLOBAL -->
+  <!-- Global styles -->
   <link rel="stylesheet" href="/home/assets/css/style.css" />
 
-  <!-- NOTES ONLY -->
-  <link rel="stylesheet" href="./style.css" />
+  <!-- Notes-only styles -->
+  <link rel="stylesheet" href="/home/notes/style.css" />
 </head>
 
 <body data-current="notes">
 
 <header class="top-header">
-  <img src="/home/assets/images/casa-logo.png" class="logo left">
+  <img src="/home/assets/images/casa-logo.png" class="logo">
   <h1 class="site-title">CASA</h1>
-  <img src="/home/assets/images/college-logo.png" class="logo right">
+  <img src="/home/assets/images/college-logo.png" class="logo">
 </header>
 
 <div class="layout">
@@ -30,52 +30,56 @@
 
   <main class="content">
 
-    <!-- CURRICULUM -->
-    <section class="card notes-section">
-      <h2 class="notes-header">Curriculum Sheets</h2>
+    <div class="notes">
 
-      <div class="semesters">
+      <!-- CURRICULUM -->
+      <div class="notes-card">
+        <div class="notes-header">📘 Curriculum Sheets</div>
 
-        <div class="semester">
-          <div class="semester-title">Semester 1</div>
-          <ul class="subjects">
-            <li><a href="#">Mathematics I</a></li>
-            <li><a href="#">Physics</a></li>
-            <li><a href="#">Programming Basics</a></li>
-          </ul>
+        <div class="notes-body">
+
+          <div class="semester">
+            <div class="semester-title">Semester 1</div>
+            <ul class="semester-content">
+              <li><a href="#">Mathematics I</a></li>
+              <li><a href="#">Physics</a></li>
+            </ul>
+          </div>
+
+          <div class="semester">
+            <div class="semester-title">Semester 2</div>
+            <ul class="semester-content">
+              <li><a href="#">Mathematics II</a></li>
+              <li><a href="#">Data Structures</a></li>
+            </ul>
+          </div>
+
         </div>
-
-        <div class="semester">
-          <div class="semester-title">Semester 2</div>
-          <ul class="subjects">
-            <li><a href="#">Mathematics II</a></li>
-            <li><a href="#">Data Structures</a></li>
-          </ul>
-        </div>
-
-        <!-- Repeat till Semester 6 -->
-
       </div>
-    </section>
 
-    <!-- PYQs -->
-    <section class="card notes-section">
-      <h2 class="notes-header">Previous Year Questions (PYQs)</h2>
-      <ul class="pyq-list">
-        <li><a href="#">DSA PYQs – 2023</a></li>
-        <li><a href="#">OS PYQs – 2022</a></li>
-        <li><a href="#">DBMS PYQs – 2021</a></li>
-      </ul>
-    </section>
+      <!-- PYQs -->
+      <div class="notes-card">
+        <div class="notes-header">📂 Previous Year Questions (PYQs)</div>
+
+        <div class="notes-body">
+          <ul class="pyq-list">
+            <li><a href="#">DSA PYQs – 2023</a></li>
+            <li><a href="#">OS PYQs – 2022</a></li>
+            <li><a href="#">DBMS PYQs – 2021</a></li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
 
   </main>
 </div>
 
-<!-- GLOBAL -->
+<!-- Global JS -->
 <script src="/home/assets/js/script.js"></script>
 
-<!-- NOTES ONLY -->
-<script src="./script.js"></script>
+<!-- Notes-only JS -->
+<script src="/home/notes/script.js"></script>
 
 </body>
 </html>
