--- a/notes/index.html
+++ b/notes/index.html
@@ -41,16 +41,16 @@
           <div class="semester">
             <div class="semester-title">Semester 1</div>
             <ul class="semester-content">
-              <li><a href="#">Mathematics I</a></li>
-              <li><a href="#">Physics</a></li>
+              <li><a href="#" class="interactive-link" download>Mathematics I</a></li>
+              <li><a href="#" class="interactive-link" download>Physics</a></li>
             </ul>
           </div>
 
           <div class="semester">
             <div class="semester-title">Semester 2</div>
             <ul class="semester-content">
-              <li><a href="#">Mathematics II</a></li>
-              <li><a href="#">Data Structures</a></li>
+              <li><a href="#" class="interactive-link" download>Mathematics II</a></li>
+              <li><a href="#" class="interactive-link" download>Data Structures</a></li>
             </ul>
           </div>
 
@@ -63,9 +63,9 @@
 
         <div class="notes-body">
           <ul class="pyq-list">
-            <li><a href="#">DSA PYQs – 2023</a></li>
-            <li><a href="#">OS PYQs – 2022</a></li>
-            <li><a href="#">DBMS PYQs – 2021</a></li>
+            <li><a href="#" class="interactive-link" download>DSA PYQs – 2023</a></li>
+            <li><a href="#" class="interactive-link" download>OS PYQs – 2022</a></li>
+            <li><a href="#" class="interactive-link" download>DBMS PYQs – 2021</a></li>
           </ul>
         </div>
       </div>
