--- a/notes/index.html
+++ b/notes/index.html
@@ -30,49 +30,48 @@
 
   <main class="content">
 
-    <div class="notes">
+  <!-- CURRICULUM -->
+  <section class="card notes-card">
+    <div class="notes-card-header">
+      <h2>Curriculum Sheets</h2>
+    </div>
 
-      <!-- CURRICULUM -->
-      <div class="notes-card">
-        <div class="notes-header">📘 Curriculum Sheets</div>
+    <div class="notes-card-body">
 
-        <div class="notes-body">
-
-          <div class="semester">
-            <div class="semester-title">Semester 1</div>
-            <ul class="semester-content">
-              <li><a href="#" class="interactive-link" download>Mathematics I</a></li>
-              <li><a href="#" class="interactive-link" download>Physics</a></li>
-            </ul>
-          </div>
-
-          <div class="semester">
-            <div class="semester-title">Semester 2</div>
-            <ul class="semester-content">
-              <li><a href="#" class="interactive-link" download>Mathematics II</a></li>
-              <li><a href="#" class="interactive-link" download>Data Structures</a></li>
-            </ul>
-          </div>
-
-        </div>
+      <div class="semester">
+        <div class="semester-title">Semester 1</div>
+        <ul class="semester-content">
+          <li><a href="#">Mathematics I</a></li>
+          <li><a href="#">Programming Fundamentals</a></li>
+        </ul>
       </div>
 
-      <!-- PYQs -->
-      <div class="notes-card">
-        <div class="notes-header">📂 Previous Year Questions (PYQs)</div>
-
-        <div class="notes-body">
-          <ul class="pyq-list">
-            <li><a href="#" class="interactive-link" download>DSA PYQs – 2023</a></li>
-            <li><a href="#" class="interactive-link" download>OS PYQs – 2022</a></li>
-            <li><a href="#" class="interactive-link" download>DBMS PYQs – 2021</a></li>
-          </ul>
-        </div>
+      <div class="semester">
+        <div class="semester-title">Semester 2</div>
+        <ul class="semester-content">
+          <li><a href="#">Mathematics II</a></li>
+          <li><a href="#">Data Structures</a></li>
+        </ul>
       </div>
 
     </div>
+  </section>
 
-  </main>
+  <!-- PYQs -->
+  <section class="card notes-card">
+    <div class="notes-card-header">
+      <h2>Previous Year Questions (PYQs)</h2>
+    </div>
+
+    <div class="notes-card-body">
+      <ul class="pyq-list">
+        <li><a href="#">DSA PYQs – 2023</a></li>
+        <li><a href="#">OS PYQs – 2022</a></li>
+      </ul>
+    </div>
+  </section>
+
+</main>
 </div>
 
 <!-- Global JS -->
