--- a/notes/index.html
+++ b/notes/index.html
@@ -7,17 +7,16 @@
 
   <!-- Global styles -->
   <link rel="stylesheet" href="/home/assets/css/style.css" />
-
-  <!-- Notes-only styles -->
+  <!-- Notes-specific styles -->
   <link rel="stylesheet" href="/home/notes/style.css" />
 </head>
 
 <body data-current="notes">
 
 <header class="top-header">
-  <img src="/home/assets/images/casa-logo.png" class="logo">
+  <img src="/home/assets/images/casa-logo.png" class="logo left">
   <h1 class="site-title">CASA</h1>
-  <img src="/home/assets/images/college-logo.png" class="logo">
+  <img src="/home/assets/images/college-logo.png" class="logo right">
 </header>
 
 <div class="layout">
@@ -28,57 +27,59 @@
     <a href="/home/archives/">Archives</a>
   </aside>
 
-  <main class="content">
+  <main class="content notes-page">
 
-  <!-- CURRICULUM -->
-  <section class="card notes-card">
-    <div class="notes-card-header">
-      <h2>Curriculum Sheets</h2>
-    </div>
+    <!-- CURRICULUM SHEETS -->
+    <section class="expand-card outer">
+      <div class="expand-header">📘 Curriculum Sheets</div>
 
-    <div class="notes-card-body">
+      <div class="expand-body">
 
-      <div class="semester">
-        <div class="semester-title">Semester 1</div>
-        <ul class="semester-content">
-          <li><a href="#">Mathematics I</a></li>
-          <li><a href="#">Programming Fundamentals</a></li>
+        <!-- SEMESTER 1 -->
+        <div class="expand-card inner">
+          <div class="expand-header">Semester 1</div>
+          <div class="expand-body">
+            <ul class="doc-list">
+              <li><a href="#">Mathematics I</a></li>
+              <li><a href="#">Physics</a></li>
+              <li><a href="#">Programming Fundamentals</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- SEMESTER 2 -->
+        <div class="expand-card inner">
+          <div class="expand-header">Semester 2</div>
+          <div class="expand-body">
+            <ul class="doc-list">
+              <li><a href="#">Mathematics II</a></li>
+              <li><a href="#">Data Structures</a></li>
+              <li><a href="#">Digital Logic</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- PYQs -->
+    <section class="expand-card outer">
+      <div class="expand-header">📄 Previous Year Questions (PYQs)</div>
+      <div class="expand-body">
+        <ul class="doc-list">
+          <li><a href="#">DSA PYQs – 2023</a></li>
+          <li><a href="#">OS PYQs – 2022</a></li>
+          <li><a href="#">DBMS PYQs – 2021</a></li>
         </ul>
       </div>
+    </section>
 
-      <div class="semester">
-        <div class="semester-title">Semester 2</div>
-        <ul class="semester-content">
-          <li><a href="#">Mathematics II</a></li>
-          <li><a href="#">Data Structures</a></li>
-        </ul>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- PYQs -->
-  <section class="card notes-card">
-    <div class="notes-card-header">
-      <h2>Previous Year Questions (PYQs)</h2>
-    </div>
-
-    <div class="notes-card-body">
-      <ul class="pyq-list">
-        <li><a href="#">DSA PYQs – 2023</a></li>
-        <li><a href="#">OS PYQs – 2022</a></li>
-      </ul>
-    </div>
-  </section>
-
-</main>
+  </main>
 </div>
 
 <!-- Global JS -->
 <script src="/home/assets/js/script.js"></script>
-
-<!-- Notes-only JS -->
+<!-- Notes JS -->
 <script src="/home/notes/script.js"></script>
-
 </body>
 </html>
