--- a/events/index.html
+++ b/events/index.html
@@ -6,7 +6,7 @@
   <title>Upcoming Events | CASA</title>
 
   <!-- Global CSS -->
-  <link rel="stylesheet" href="/home/assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 
 <body data-current="events">
@@ -15,9 +15,9 @@
        HEADER
   ====================== -->
   <header class="top-header">
-    <img src="/home/assets/images/casa-logo.png" class="logo left" alt="CASA Logo">
+    <img src="../assets/images/casa-logo.png" class="logo left" alt="CASA Logo">
     <h1 class="site-title">CASA</h1>
-    <img src="/home/assets/images/college-logo.png" class="logo right" alt="College Logo">
+    <img src="../assets/images/college-logo.png" class="logo right" alt="College Logo">
   </header>
 
   <!-- =====================
@@ -27,10 +27,10 @@
 
     <!-- SIDEBAR -->
     <aside class="sidebar">
-      <a href="/home/" data-page="home">Home</a>
-      <a href="/home/events/" data-page="events">Upcoming Events</a>
-      <a href="/home/notes/" data-page="notes">Notes</a>
-      <a href="/home/archives/" data-page="archives">Archives</a>
+      <a href="../" data-page="home">Home</a>
+      <a href="../events/" data-page="events">Upcoming Events</a>
+      <a href="../notes/" data-page="notes">Notes</a>
+      <a href="../archives/" data-page="archives">Archives</a>
     </aside>
 
     <!-- CONTENT -->
@@ -86,6 +86,6 @@
   </div>
 
   <!-- Global JS -->
-  <script src="/home/assets/js/script.js"></script>
+  <script src="../assets/js/script.js"></script>
 </body>
 </html>
