--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CASA | CO & AN Students Association</title>
-  <link rel="stylesheet" href="/home/assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body data-current="home">
 
 <header class="top-header">
-  <img src="/home/assets/images/casa-logo.png" alt="CASA Logo" class="logo left">
+  <img src="./assets/images/casa-logo.png" alt="CASA Logo" class="logo left">
   <h1 class="site-title">CO & AN Students Association (CASA)</h1>
-  <img src="/home/assets/images/college-logo.png" alt="College Logo" class="logo right">
+  <img src="./assets/images/college-logo.png" alt="College Logo" class="logo right">
 </header>
 
 <div class="layout">
   <aside class="sidebar">
-    <a href="/home/" data-page="home">Home</a>
-    <a href="/home/events/" data-page="events">Upcoming Events</a>
-    <a href="/home/notes/" data-page="notes">Notes</a>
-    <a href="/home/archives/" data-page="archives">Archives</a>
+    <a href="./" data-page="home">Home</a>
+    <a href="./events/" data-page="events">Upcoming Events</a>
+    <a href="./notes/" data-page="notes">Notes</a>
+    <a href="./archives/" data-page="archives">Archives</a>
   </aside>
 
   <main class="content">
@@ -36,6 +36,6 @@
   </main>
 </div>
 
-<script src="/home/assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
