--- a/notes/index.html
+++ b/notes/index.html
@@ -6,7 +6,7 @@
   <title>Notes | CASA</title>
 
   <!-- GLOBAL STYLES -->
-  <link rel="stylesheet" href="/home/assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 
   <!-- NOTES STYLES -->
   <link rel="stylesheet" href="./style.css" />
@@ -15,17 +15,17 @@
 <body>
 
 <header class="top-header">
-  <img src="/home/assets/images/casa-logo.png" class="logo">
+  <img src="../assets/images/casa-logo.png" class="logo">
   <h1 class="site-title">CASA</h1>
-  <img src="/home/assets/images/college-logo.png" class="logo">
+  <img src="../assets/images/college-logo.png" class="logo">
 </header>
 
 <div class="layout">
   <aside class="sidebar">
-    <a href="/home/">Home</a>
-    <a href="/home/events/">Upcoming Events</a>
-    <a href="/home/notes/" class="active">Notes</a>
-    <a href="/home/archives/">Archives</a>
+    <a href="../">Home</a>
+    <a href="../events/">Upcoming Events</a>
+    <a href="../notes/" class="active">Notes</a>
+    <a href="../archives/">Archives</a>
   </aside>
 
   <main class="content">
