--- a/notes/index.html
+++ b/notes/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notes | CASA</title>
 
-  <!-- GLOBAL STYLES -->
   <link rel="stylesheet" href="../assets/css/style.css" />
-
-  <!-- NOTES STYLES -->
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -31,50 +28,194 @@
   <main class="content">
     <section class="notes">
 
-      <!-- CURRICULUM SHEETS -->
-      <div class="notes-card">
-        <div class="notes-header">📘 Curriculum Sheets</div>
+<!-- ================= CURRICULUM ================= -->
 
-        <div class="notes-content">
+<div class="notes-card">
+  <div class="notes-header">
+    📘 Curriculum Sheets
+    <span class="chevron">⌄</span>
+  </div>
 
-          <!-- SEM 1 -->
-          <div class="notes-card inner">
-            <div class="notes-header">Semester 1</div>
-            <div class="notes-content">
-              <ul class="subject-list">
-                <li><a href="#">Mathematics I</a></li>
-                <li><a href="#">Physics</a></li>
-                <li><a href="#">Programming Fundamentals</a></li>
-              </ul>
-            </div>
-          </div>
+  <div class="notes-content">
 
-          <!-- SEM 2 -->
-          <div class="notes-card inner">
-            <div class="notes-header">Semester 2</div>
-            <div class="notes-content">
-              <ul class="subject-list">
-                <li><a href="#">Mathematics II</a></li>
-                <li><a href="#">Data Structures</a></li>
-                <li><a href="#">Digital Logic</a></li>
-              </ul>
-            </div>
-          </div>
+<!-- SEM 1 -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 1 <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/1_ozshE7cGfN6Or2mrf5FsR7LRDFOlfXG/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1ihrJBLrMkf4ebJ2G4864yF_48SRUgfHl/view?usp=drive_link">BMS</a></li>
+      <li><a href="https://drive.google.com/file/d/1vOyLHWBxoYqVZtoBrWJGjs3yg6bh-d9w/view?usp=drive_link">CMS</a></li>
+      <li><a href="https://drive.google.com/file/d/16mwv7J_wlkHhrURDSMhjxrWAwTJWwqHw/view?usp=drive_link">CPR</a></li>
+      <li><a href="https://drive.google.com/file/d/1WGrG_30-vWYqqsOmJUu9RFTMy2QXS-M2/view?usp=drive_link">ICT</a></li>
+      <li><a href="https://drive.google.com/file/d/1ftfLi-h46rLUjsB899gexZ2GdHbXEJQe/view?usp=drive_link">WPC</a></li>
+      <li><a href="https://drive.google.com/file/d/1Io47ndGHi4XyGPvDiIj8Yx8tleva0KLW/view?usp=drive_link">WPD</a></li>
+      <li><a href="https://drive.google.com/file/d/129pqSnXPtb32tE6s8UDxQIBGROgGH4Qj/view?usp=drive_link">YAM</a></li>
+    </ul>
+  </div>
+</div>
 
-        </div>
-      </div>
+<!-- SEM 2 -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 2 <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/1SHqe1YkDa5sS4nd9T6ICI6S4W23COt5v/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/13137zRWz2CmqmpWpGMMyAfJ2sCAic4yA/view?usp=drive_link">AMS</a></li>
+      <li><a href="https://drive.google.com/file/d/1uDMs4T9xwrso4i-qwVcmsERseDPcgu-E/view?usp=drive_link">BEE</a></li>
+      <li><a href="https://drive.google.com/file/d/1SGorEUN9bwI8dVVXfihbBCoYUmaZglJx/view?usp=drive_link">BLP</a></li>
+      <li><a href="https://drive.google.com/file/d/1z_qOkFcXsEg7duHaExAFsnpVjvHLLPW1/view?usp=drive_link">BPD</a></li>
+      <li><a href="https://drive.google.com/file/d/19_dHdY6OURIlQQ6jikfyvgG1Bd6aZLir/view?usp=drive_link">BSC</a></li>
+      <li><a href="https://drive.google.com/file/d/1dQbc3Tfa0yazwUw0-dc5LvRZBSMQ2sdk/view?usp=drive_link">DSU</a></li>
+      <li><a href="https://drive.google.com/file/d/1A6EELU9hdVc5KWVX_z4l2ip481wTN_4K/view?usp=drive_link">PCO</a></li>
+    </ul>
+  </div>
+</div>
 
-      <!-- PYQs -->
-      <div class="notes-card">
-        <div class="notes-header">📄 Previous Year Questions (PYQs)</div>
-        <div class="notes-content">
-          <ul class="pyq-list">
-            <li><a href="#">DSA – 2023</a></li>
-            <li><a href="#">OS – 2022</a></li>
-            <li><a href="#">Maths – 2021</a></li>
-          </ul>
-        </div>
-      </div>
+<!-- SEM 3 AIML (AN) -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 3 – AIML (AN) <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/12eHfhJnSmxWEYdIaTlNN7O68PzQlk3zd/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1-YeMcCOPx8Nr0BeJI2YWNgYO5eW3lx8U/view?usp=drive_link">DST</a></li>
+      <li><a href="https://drive.google.com/file/d/1XHYDxpJe7JlsMtgrCYOw373uHUmdxDKd/view?usp=drive_link">DTM</a></li>
+      <li><a href="https://drive.google.com/file/d/1RfDsCP76BkfOYV8b0mSe14tH4IaWvhTl/view?usp=drive_link">GIMP</a></li>
+      <li><a href="https://drive.google.com/file/d/1yWLLfIr_tkNqwth9J4XwtEcGc2qw6-jU/view?usp=drive_link">MML</a></li>
+      <li><a href="https://drive.google.com/file/d/1A2zATzu9_dHD5to0vbRTcAEFMd7CbKID/view?usp=drive_link">APD</a></li>
+      <li><a href="https://drive.google.com/file/d/1aZ0K92608Mo1OBzP3tF-a9_pbbcMjA9r/view?usp=drive_link">OSY</a></li>
+      <li><a href="https://drive.google.com/file/d/1_EC994gEBOJCtjUHTgFGyl3X40vsG0MJ/view?usp=drive_link">PWP</a></li>
+      <li><a href="https://drive.google.com/file/d/16Rx3Ts-9LyJAKw-WIpTohv1qENYxQaA8/view?usp=drive_link">RDB</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 3 CO -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 3 – CO <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="#">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1A2zATzu9_dHD5to0vbRTcAEFMd7CbKID/view?usp=drive_link">APD</a></li>
+      <li><a href="https://drive.google.com/file/d/1a3FI85auhZAJkvwwL-DFxlE2WDqkohUE/view?usp=drive_link">DMK</a></li>
+      <li><a href="https://drive.google.com/file/d/1ro8P4tD9410gICasU95mawtxRLA9lg4o/view?usp=drive_link">OOJ</a></li>
+      <li><a href="https://drive.google.com/file/d/1XHYDxpJe7JlsMtgrCYOw373uHUmdxDKd/view?usp=drive_link">DTM</a></li>
+      <li><a href="https://drive.google.com/file/d/1aZ0K92608Mo1OBzP3tF-a9_pbbcMjA9r/view?usp=drive_link">OSY</a></li>
+      <li><a href="https://drive.google.com/file/d/1_EC994gEBOJCtjUHTgFGyl3X40vsG0MJ/view?usp=drive_link">PWP</a></li>
+      <li><a href="https://drive.google.com/file/d/16Rx3Ts-9LyJAKw-WIpTohv1qENYxQaA8/view?usp=drive_link">RDB</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 4 AIML -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 4 – AIML <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/1EOAINe6H0xz5TH33OpHf-pRe2qWDvToo/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1Pn00nXHuXOKjzqu3holeFp78CysQqIoA/view?usp=drive_link">CCG</a></li>
+      <li><a href="https://drive.google.com/file/d/1bwRnVfCDH9YNXqrmIAf9-4mOfFD86O6s/view?usp=drive_link">DCN</a></li>
+      <li><a href="https://drive.google.com/file/d/1ttVG4LKfLiWmzoB7QeL_tRNCDBvEOWE4/view?usp=drive_link">DHP</a></li>
+      <li><a href="https://drive.google.com/file/d/1Qf-ioDsNF2Bboe54mVgO_eYvoNr99sGV/view?usp=drive_link">EIC</a></li>
+      <li><a href="https://drive.google.com/file/d/1wnTh2Qm1L9hJ9rea5ruT37J1H4AZXMGY/view?usp=drive_link">ANS</a></li>
+      <li><a href="https://drive.google.com/file/d/1sGLPf0hAVyK9wPbVjyGqm48nbu1-3xzV/view?usp=drive_link">MTL</a></li>
+      <li><a href="https://drive.google.com/file/d/16c0pj1NPMxjep75-RYRcS0JRJDJ77AHs/view?usp=drive_link">NLP</a></li>
+      <li><a href="https://drive.google.com/file/d/1inOuyUCBgU6jd2_nPG8UV2xwWS-Q5LCv/view?usp=drive_link">OOJ</a></li>
+      <li><a href="https://drive.google.com/file/d/1C1hogizR6tsAY9x6lKunUWFbIsYaaDHM/view?usp=drive_link">RAE</a></li>
+      <li><a href="https://drive.google.com/file/d/1i-nnMxoyn-hT1FKaGTNx_WVrSZAx85sU/view?usp=drive_link">RFL</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 4 CO -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 4 – CO <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="#">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1Pn00nXHuXOKjzqu3holeFp78CysQqIoA/view?usp=drive_link">CCG</a></li>
+      <li><a href="https://drive.google.com/file/d/1T3HYEQe2UEAHT_LftZ3g0tpX_kvly06i/view?usp=drive_link">AJP</a></li>
+      <li><a href="https://drive.google.com/file/d/1j4zFAhQblXzPXf41zcy1qxJiNSxugR9V/view?usp=drive_link">CGR</a></li>
+      <li><a href="https://drive.google.com/file/d/177L64bZZk9thsWtppnVGWOxWjMCvfrs4/view?usp=drive_link">CNE</a></li>
+      <li><a href="https://drive.google.com/file/d/1XNBhPuX8gxfNe5nQ2bZMydVchwRSw9M5/view?usp=drive_link">DIP</a></li>
+      <li><a href="https://drive.google.com/file/d/1zShtauKK_ngSiwkeF6lS6zls_heqvcxO/view?usp=drive_link">IOT</a></li>
+      <li><a href="https://drive.google.com/file/d/176EeXBEEMZaYXxpKfkj_G0gw_bc9lzkN/view?usp=drive_link">SEN</a></li>
+      <li><a href="https://drive.google.com/file/d/1Qf-ioDsNF2Bboe54mVgO_eYvoNr99sGV/view?usp=drive_link">EIC</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 5 AIML -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 5 – AIML <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/1vtTcIKhVkoXWhSZMiNLfj6O0FuCE3E-D/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1qIT0R85miVV1DMxH8hUFVkBJ2AWWgv6z/view?usp=drive_link">CVS</a></li>
+      <li><a href="https://drive.google.com/file/d/15fVU2Ug7cYJjn9k691S6sOQ-_s8UUvrg/view?usp=drive_link">DSM</a></li>
+      <li><a href="https://drive.google.com/file/d/1x62V2gQ7kuCa8QVZ6Y7dSel9VCWKyHq8/view?usp=drive_link">DWM</a></li>
+      <li><a href="https://drive.google.com/file/d/1hTK_CMmiaVxbvW1p2c-NyFkP8lUU9kG8/view?usp=drive_link">EES</a></li>
+      <li><a href="https://drive.google.com/file/d/1WJrtI5hb6ERoMKMtWoqnmX4PUMXfx8l0/view?usp=drive_link">MAD</a></li>
+      <li><a href="https://drive.google.com/file/d/1MWPQH2Vk6dULZ-JUh-78AEvyvZeejg12/view?usp=drive_link">MGT</a></li>
+      <li><a href="https://drive.google.com/file/d/1ggqDxy3ga2PcL5nO_-zBf4mZeASau7-g/view?usp=drive_link">MLG</a></li>
+      <li><a href="https://drive.google.com/file/d/1HBgHHwWSghf82mJlXFkbZQF0x5fRmvkg/view?usp=drive_link">RPG</a></li>
+      <li><a href="https://drive.google.com/file/d/11XuTRDgbAX-fQvd0XbXecUqes3oAWr94/view?usp=drive_link">SET</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 5 CO -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 5 – CO <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="#">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1uV3ldLPfG7JefjLzfq8ZTXPX8MYTBejV/view?usp=drive_link">ADM</a></li>
+      <li><a href="https://drive.google.com/file/d/1-nvnnzB1hMAqkjJTr77LfnOX3JgDaGso/view?usp=drive_link">CSE</a></li>
+      <li><a href="https://drive.google.com/file/d/1B7lUdRoSYLR4vMizxIHn_pT_P-M2OoKT/view?usp=drive_link">DSM</a></li>
+      <li><a href="https://drive.google.com/file/d/1Lqm3EMSOWN2_1TYxz3crdqRXlwzg_zUr/view?usp=drive_link">EES</a></li>
+      <li><a href="https://drive.google.com/file/d/1rXi2Mf7nWyjAnTsuHOfAXO12n8_fwXxv/view?usp=drive_link">FAI</a></li>
+      <li><a href="https://drive.google.com/file/d/1TJyafoIGfTZa6AjqNbDtAFsYz9zwZxMW/view?usp=drive_link">MAD</a></li>
+      <li><a href="https://drive.google.com/file/d/1MWPQH2Vk6dULZ-JUh-78AEvyvZeejg12/view?usp=drive_link">MGT</a></li>
+      <li><a href="https://drive.google.com/file/d/1oRWPZHEItRAPHAobdXvZ49DCrefM2QZt/view?usp=drive_link">STE</a></li>
+      <li><a href="https://drive.google.com/file/d/1t_UgmZD3XWuuKXysPDrC31S2WxfcY3BM/view?usp=drive_link">WDP</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- SEM 6 AIML & CO -->
+<div class="notes-card inner">
+  <div class="notes-header">Semester 6 – AIML & CO <span class="chevron">⌄</span></div>
+  <div class="notes-content">
+    <ul class="subject-list">
+      <li><a href="https://drive.google.com/file/d/1mjAV0G5-CJKBx17D06ih0Oj01E8RDtCG/view?usp=drive_link">Course Structure</a></li>
+      <li><a href="https://drive.google.com/file/d/1VYlfOK22d5jbMq06J5VURIiQ1YOhSXjo/view?usp=drive_link">EDS</a></li>
+      <li><a href="https://drive.google.com/file/d/15p9YWZlXyGoo0BLrI-E-486Vk0cZhmjs/view?usp=drive_link">INP</a></li>
+      <li><a href="https://drive.google.com/file/d/1QPjchuJ6f3pqzjuOMunsbN-G67SYT-7F/view?usp=drive_link">PRO</a></li>
+      <li><a href="https://drive.google.com/file/d/1izul0x25SEpnOh_wXGhTZl-u2Qx2rRt2/view?usp=drive_link">SEM</a></li>
+    </ul>
+  </div>
+</div>
+
+  </div>
+</div>
+
+<!-- ================= PYQs ================= -->
+
+<div class="notes-card">
+  <div class="notes-header">
+    📄 Previous Year Questions (PYQs)
+    <span class="chevron">⌄</span>
+  </div>
+
+  <div class="notes-content">
+    <ul class="pyq-list">
+      <li><a href="#">DSA – 2023</a></li>
+      <li><a href="#">OS – 2022</a></li>
+      <li><a href="#">Maths – 2021</a></li>
+    </ul>
+  </div>
+</div>
 
     </section>
   </main>
