--- a/events/index.html
+++ b/events/index.html
@@ -85,7 +85,19 @@
     </main>
   </div>
 
-  <!-- Global JS -->
-  <script src="../assets/js/script.js"></script>
+  <footer class="fixed-footer">
+  <div class="footer-links">
+    <a href="https://instagram.com/" target="_blank">📸 Instagram</a>
+    <a href="https://linkedin.com/" target="_blank">💼 LinkedIn</a>
+    <a href="mailto:casacoan2526@gmail.com">✉️ casacoan2526@gmail.com</a>
+  </div>
+  <div class="footer-credit">
+    © <span class="full-name">CO & AN Students Association</span>
+    <span class="short-name">CASA</span>
+  </div>
+</footer>
+
+<!-- Global JS -->
+<script src="../assets/js/script.js"></script>
 </body>
 </html>
