--- a/notes/index.html
+++ b/notes/index.html
@@ -210,9 +210,9 @@
 
   <div class="notes-content">
     <ul class="pyq-list">
-      <li><a href="#">DSA – 2023</a></li>
-      <li><a href="#">OS – 2022</a></li>
-      <li><a href="#">Maths – 2021</a></li>
+      <li><a href="https://drive.google.com/file/d/195SbdiyMRxGhbs5aZvHqsVhe_8WQJRWW/view?usp=drive_link">1st-Sem: 2024</a></li>
+      <li><a href="https://drive.google.com/file/d/1kO7xm-SA-A3jJLrStVYqE84LqxK4y2V_/view?usp=drive_link">2nd-Sem: 2024</a></li>
+      <!--<li><a href="#"></a></li>-->
     </ul>
   </div>
 </div>
